; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/reiserfs/extr_journal.c_reiserfs_end_persistent_transaction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/reiserfs/extr_journal.c_reiserfs_end_persistent_transaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reiserfs_transaction_handle = type { i64, i32, %struct.super_block*, i64 }
%struct.super_block = type { i32 }
%struct.TYPE_2__ = type { i32 }

@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @reiserfs_end_persistent_transaction(%struct.reiserfs_transaction_handle* %0) #0 {
  %2 = alloca %struct.reiserfs_transaction_handle*, align 8
  %3 = alloca %struct.super_block*, align 8
  %4 = alloca i32, align 4
  store %struct.reiserfs_transaction_handle* %0, %struct.reiserfs_transaction_handle** %2, align 8
  %5 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %6 = getelementptr inbounds %struct.reiserfs_transaction_handle, %struct.reiserfs_transaction_handle* %5, i32 0, i32 2
  %7 = load %struct.super_block*, %struct.super_block** %6, align 8
  store %struct.super_block* %7, %struct.super_block** %3, align 8
  store i32 0, i32* %4, align 4
  %8 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %9 = getelementptr inbounds %struct.reiserfs_transaction_handle, %struct.reiserfs_transaction_handle* %8, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %1
  %13 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %14 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %15 = getelementptr inbounds %struct.reiserfs_transaction_handle, %struct.reiserfs_transaction_handle* %14, i32 0, i32 2
  %16 = load %struct.super_block*, %struct.super_block** %15, align 8
  %17 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %18 = getelementptr inbounds %struct.reiserfs_transaction_handle, %struct.reiserfs_transaction_handle* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @journal_end(%struct.reiserfs_transaction_handle* %13, %struct.super_block* %16, i32 %19)
  store i32 %20, i32* %4, align 4
  br label %24

21:                                               ; preds = %1
  %22 = load i32, i32* @EIO, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %12
  %25 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %26 = getelementptr inbounds %struct.reiserfs_transaction_handle, %struct.reiserfs_transaction_handle* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %37

29:                                               ; preds = %24
  %30 = load %struct.super_block*, %struct.super_block** %3, align 8
  %31 = call %struct.TYPE_2__* @SB_JOURNAL(%struct.super_block* %30)
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = add nsw i32 %33, -1
  store i32 %34, i32* %32, align 4
  %35 = load %struct.reiserfs_transaction_handle*, %struct.reiserfs_transaction_handle** %2, align 8
  %36 = call i32 @kfree(%struct.reiserfs_transaction_handle* %35)
  br label %37

37:                                               ; preds = %29, %24
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @journal_end(%struct.reiserfs_transaction_handle*, %struct.super_block*, i32) #1

declare dso_local %struct.TYPE_2__* @SB_JOURNAL(%struct.super_block*) #1

declare dso_local i32 @kfree(%struct.reiserfs_transaction_handle*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
